Fixed spacing to have first products row fit in fold of screen.

--- a/wp-content/themes/arizona-envelope/assets/styles/common/_global.scss
+++ b/wp-content/themes/arizona-envelope/assets/styles/common/_global.scss
@@ -8,7 +8,7 @@ body{
 	font-family: inherit;
 }
 h1{
-	font: 700 rem(50) $heading-font;
+	font: 700 rem(42) $heading-font;
 }
 h2{
 	font: 400 rem(23) $copy-font;
