--- a/wp-content/themes/arizona-envelope/assets/styles/components/_panels.scss
+++ b/wp-content/themes/arizona-envelope/assets/styles/components/_panels.scss
@@ -302,9 +302,8 @@ section{
 .category-shop-header{
 	background-color: $brand-orange;
 	width: 100%;
-	margin-bottom: rem(20);
-	padding: rem(20) 0;
-	margin-top: rem(12);
+	padding: rem(12) 0;
+	margin: rem(8) 0;
 	.menu-shop-navigation-container, .woocommerce-MyAccount-navigation{
 		.shop-navigation-bar, .orange-navigation-bar{
 			//padding-left: rem(26);
